--- a/Hope-it-doesn-t-snow-weatherforecast.html
+++ b/Hope-it-doesn-t-snow-weatherforecast.html
@@ -42,6 +42,7 @@
                     <div class="card-img-overlay">
                         <h3 class="card-title"></h3>
                         <p class="card-text">
+                            <p class="date"></p>
                             <ul>
                                 <li class="Temp"></li>
                                 <li class="Wind-speed"></li>
